# cream

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile  test_registry_sync
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  test_binding
backend/crates/api/: Cargo.toml
backend/crates/api/src/: alert_engine.rs  audit_export.rs  config.rs  db.rs  docs_coverage.rs  error.rs  lib.rs  main.rs  metrics.rs  openapi.rs  orchestrator.rs  state.rs  webhook_worker.rs
backend/crates/api/src/extractors/: auth.rs  json.rs
backend/crates/api/src/middleware/: logging.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
backend/crates/api/src/notifications/: email.rs  mod.rs  slack.rs
backend/crates/api/src/routes/: agents.rs  alerts.rs  audit.rs  audit_export.rs  auth.rs  cards.rs  integrations.rs  mod.rs  payments.rs  providers.rs  settings.rs  templates.rs  webhooks.rs
backend/crates/api/tests/: db_serialization.rs  phase_15_1_operator_endpoints.rs
backend/crates/api/tests/common/: mod.rs
backend/crates/audit/: Cargo.toml
backend/crates/audit/src/: error.rs  lib.rs  reader.rs  writer.rs
backend/crates/models/: Cargo.toml
backend/crates/models/src/: agent.rs  audit.rs  card.rs  error.rs  ids.rs  justification.rs  lib.rs  payment.rs  policy.rs  provider.rs  recipient.rs
backend/crates/policy/: Cargo.toml
backend/crates/policy/src/: context.rs  engine.rs  error.rs  evaluator.rs  lib.rs  tests.rs
backend/crates/policy/src/rules/: amount_cap.rs  category_check.rs  duplicate_detection.rs  escalation_threshold.rs  first_time_merchant.rs  geographic.rs  justification_quality.rs  merchant_check.rs  mod.rs  proportionality.rs  rail_restriction.rs  spend_rate.rs  time_window.rs  velocity_limit.rs
backend/crates/providers/: Cargo.toml
backend/crates/providers/src/: error.rs  lib.rs  mock_provider.rs  registry.rs  traits.rs  types.rs
backend/crates/router/: Cargo.toml
backend/crates/router/src/: circuit_breaker.rs  config.rs  error.rs  idempotency.rs  lib.rs  scorer.rs  selector.rs
backend/mcp-server/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  server.json
backend/mcp-server/src/: api-client.ts  config.ts  index.ts  types.ts
backend/mcp-server/src/prompts/: index.ts  justification-template.ts  policy-summary.ts
backend/mcp-server/src/resources/: audit.ts  balance.ts  index.ts  policy.ts
backend/mcp-server/src/tools/: check-provider-health.ts  create-virtual-card.ts  get-audit-history.ts  get-my-policy.ts  get-payment-status.ts  index.ts  initiate-payment.ts
backend/mcp-server/tests/: api-client.test.ts  config.test.ts  tools.test.ts
backend/migrations/: 20260331200001_create_agent_profiles.down.sql  20260331200001_create_agent_profiles.up.sql  20260331200002_create_agents.down.sql  20260331200002_create_agents.up.sql  20260331200003_create_policy_rules.down.sql  20260331200003_create_policy_rules.up.sql  20260331200004_create_payments.down.sql  20260331200004_create_payments.up.sql  20260331200005_create_virtual_cards.down.sql  20260331200005_create_virtual_cards.up.sql  20260331200006_create_audit_log.down.sql  20260331200006_create_audit_log.up.sql  20260331200007_create_provider_health.down.sql  20260331200007_create_provider_health.up.sql  20260331200008_create_webhook_endpoints.up.sql  20260331200009_create_idempotency_keys.up.sql  20260401200001_add_timezone_and_rule_type.down.sql  20260401200001_add_timezone_and_rule_type.up.sql  20260401200002_add_missing_indexes.down.sql  20260401200002_add_missing_indexes.up.sql  20260401200003_add_virtual_cards_updated_at.down.sql  20260401200003_add_virtual_cards_updated_at.up.sql  20260401200004_add_payments_status_check_and_policy_index.down.sql  20260401200004_add_payments_status_check_and_policy_index.up.sql  20260401200005_hardening_indexes_and_checks.down.sql  20260401200005_hardening_indexes_and_checks.up.sql  20260401200006_payment_amount_checks_and_enum_constraints.down.sql  20260401200006_payment_amount_checks_and_enum_constraints.up.sql  20260401200007_add_webhook_endpoints_updated_at.down.sql  20260401200007_add_webhook_endpoints_updated_at.up.sql  20260402200001_settled_currency_constraint_and_provider_id_index.down.sql  20260402200001_settled_currency_constraint_and_provider_id_index.up.sql  20260405200001_virtual_cards_provider_unique.down.sql  20260405200001_virtual_cards_provider_unique.up.sql  20260405200002_settlement_field_pairing.down.sql  20260405200002_settlement_field_pairing.up.sql  20260405200003_virtual_cards_provider_index_and_webhook_url_unique.down.sql  20260405200003_virtual_cards_provider_index_and_webhook_url_unique.up.sql  20260405200004_name_length_constraints.down.sql  20260405200004_name_length_constraints.up.sql  (+35 more)
backend/tests/: db_serialization.rs  payment_serde_test.rs
backend/tests/common/: mod.rs
docs/: api-reference.md  backend-blueprint.md  changelog.md  tldr.md
docs/guides/: agent-integration.md  mcp-integration.md  operator-setup.md  policy-authoring.md  self-hosting.md  webhook-integration.md
frontend/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/agents/: actions.ts  error.tsx  loading.tsx  page.tsx
frontend/app/audit/: error.tsx  loading.tsx  page.tsx
frontend/app/escalations/: actions.ts  error.tsx  loading.tsx  page.tsx
frontend/app/policies/: actions.ts  error.tsx  loading.tsx  page.tsx  policies-client.tsx
frontend/app/providers/: actions.ts  error.tsx  loading.tsx  page.tsx
frontend/app/settings/: actions.ts  error.tsx  loading.tsx  page.tsx  settings-client.tsx
frontend/app/transactions/: error.tsx  loading.tsx  page.tsx
frontend/components/agents/: agent-form.tsx  api-key-display.tsx  rotate-key-dialog.tsx
frontend/components/audit/: audit-detail-panel.tsx  audit-filter-bar.tsx  audit-table.tsx
frontend/components/layout/: header.tsx  (+1 more)
frontend/lib/: api.ts  auth.ts  types.ts  utils.ts
(+36 files in other folders)
