[workspace]
members = [
    "crates/api",
    "crates/audit",
    "crates/models",
    "crates/policy",
    "crates/providers",
    "crates/router",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }
# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
# Error handling
thiserror = "2"
anyhow = "1"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# Async traits
async-trait = "0.1"
# Regex
regex = "1"
# Hashing
sha2 = "0.10"
hex = "0.4"
# Testing
mockall = "0.13"

# Internal crates
cream-models = { path = "crates/models" }
cream-audit = { path = "crates/audit" }
cream-policy = { path = "crates/policy" }
cream-providers = { path = "crates/providers" }
cream-router = { path = "crates/router" }
