[workspace]
members = [
    "crates/api",
    "crates/audit",
    "crates/models",
    "crates/policy",
    "crates/providers",
    "crates/router",
]
resolver = "2"

[workspace.package]
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json"] }
# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
# Error handling
thiserror = "2"
anyhow = "1"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
# OpenTelemetry (gated behind OTEL_ENABLED)
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
# Async traits
async-trait = "0.1"
# Regex
regex = "1"
# Hashing & crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
# JWT
jsonwebtoken = "9"
# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
# Constant-time comparison
subtle = "2"
# Encryption
aes-gcm = "0.10"
# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
# CSV export
csv = "1.3"
# OpenAPI
utoipa = { version = "5", features = ["chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# AWS S3 (audit export)
aws-config = "1"
aws-sdk-s3 = "1"
# Testing
mockall = "0.13"

# Internal crates
cream-models = { path = "crates/models" }
cream-audit = { path = "crates/audit" }
cream-policy = { path = "crates/policy" }
cream-providers = { path = "crates/providers" }
cream-router = { path = "crates/router" }
