[package]
name = "cream-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cream-api"
path = "src/main.rs"

[dependencies]
cream-models = { workspace = true }
cream-audit = { workspace = true }
cream-policy = { workspace = true }
cream-providers = { workspace = true }
cream-router = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = false }
subtle = { workspace = true }
urlencoding = "2"
lettre = { workspace = true }
aes-gcm = { workspace = true }
rand = "0.9"

[dev-dependencies]
mockall = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
# Integration test dependencies
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json", "migrate"] }
