[package]
name = "cream-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
cream-models = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
