[package]
name = "cream-router"
version = "0.1.0"
edition = "2021"

[dependencies]
cream-models = { workspace = true }
cream-providers = { workspace = true }
cream-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
